# tps_mc

./: .gitignore  LICENSE  MANIFEST.in  README.MD  environment.yml  pyproject.toml  setup.py
example/: config.json
tps_mc/: __init__.py  cli.py  controller.py  particles.py  projector.html  projector.pyx  sampler.html  sampler.pyx  visualize.py
